wrapped into functions

--- a/statistical_dq/stat_dq.ipynb
+++ b/statistical_dq/stat_dq.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "a69d0978-bb8d-4ee5-bd31-ce02600b4014",
    "metadata": {},
    "outputs": [],
@@ -124,12 +124,13 @@
     "        print(\"Upper Bound: \", upper_bound)\n",
     "        print(\"Lower Bound: \", lower_bound)\n",
     "        print(\"Outliers: \", outliers)\n",
+    "        print(\"Outlier Count: \", len(outliers))\n",
     "    return outliers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "f4a0428d-429a-4209-ab48-513ae8933fe7",
    "metadata": {},
    "outputs": [
@@ -150,7 +151,8 @@
       "  4.51499206  3.00918897  5.37526903  5.51825815  6.75897833  4.09084031\n",
       "  6.00309356  5.3467973   4.8990804   5.186047    3.79715411 -2.78076139\n",
       "  5.77517692  4.04405104  4.12500195  4.74194492  4.37178552  5.32829414\n",
-      "  5.9813509   4.23594793  5.14458149  5.7191544 ]\n"
+      "  5.9813509   4.23594793  5.14458149  5.7191544 ]\n",
+      "Outlier Count:  52\n"
      ]
     },
     {
@@ -169,34 +171,13 @@
        "        5.14458149,  5.7191544 ])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "calculate_iqr(data, perc_range = [25, 75], print_stats = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "d190e867-3edd-4e76-890b-9f5190cbb50f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "49"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(outliers)"
    ]
   },
   {
@@ -209,16 +190,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bed3f8b6-861a-498c-9d1b-9c17be3298ef",
+   "execution_count": 30,
+   "id": "9196d65d-7f9b-4ad2-b9ef-4e6b24f260e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_sd(data, N, print_stats = True):\n",
+    "    # calculate the mean and standard deviation\n",
+    "    mean = np.mean(data)\n",
+    "    std_dev = np.std(data)\n",
+    "\n",
+    "    # calculate the upper and lower bounds\n",
+    "    upper_bound = mean + (N * std_dev)\n",
+    "    lower_bound = mean - (N * std_dev)\n",
+    "\n",
+    "    # identify the outliers\n",
+    "    outliers = data[(data < lower_bound) | (data > upper_bound)]\n",
+    "    \n",
+    "    if print_stats:\n",
+    "        # print the results\n",
+    "        print(\"Mean: \", mean)\n",
+    "        print(\"Standard Deviation: \", std_dev)\n",
+    "        print(\"Upper Bound: \", upper_bound)\n",
+    "        print(\"Lower Bound: \", lower_bound)\n",
+    "        print(\"Outliers: \", outliers)\n",
+    "        print(\"Outlier Count: \", len(outliers))\n",
+    "    return outliers"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "783a357a-f2b5-4109-9d7f-4f8274dd7b7c",
+   "execution_count": 31,
+   "id": "c38a04d3-5c9e-4c17-b2bd-d2eecc0b219b",
    "metadata": {},
    "outputs": [
     {
@@ -237,50 +240,32 @@
       "  5.51825815  6.75897833  4.09084031  6.00309356  5.3467973   4.8990804\n",
       "  5.186047    3.79715411 -2.78076139  5.77517692  4.04405104  4.12500195\n",
       "  4.74194492  4.37178552  5.32829414  5.9813509   4.23594793  5.14458149\n",
-      "  5.7191544 ]\n"
+      "  5.7191544 ]\n",
+      "Outlier Count:  49\n"
      ]
-    }
-   ],
-   "source": [
-    "# calculate the mean and standard deviation\n",
-    "mean = np.mean(data)\n",
-    "std_dev = np.std(data)\n",
-    "N = 2\n",
-    "\n",
-    "# calculate the upper and lower bounds\n",
-    "upper_bound = mean + (N * std_dev)\n",
-    "lower_bound = mean - (N * std_dev)\n",
-    "\n",
-    "# identify the outliers\n",
-    "outliers = data[(data < lower_bound) | (data > upper_bound)]\n",
-    "\n",
-    "# print the results\n",
-    "print(\"Mean: \", mean)\n",
-    "print(\"Standard Deviation: \", std_dev)\n",
-    "print(\"Upper Bound: \", upper_bound)\n",
-    "print(\"Lower Bound: \", lower_bound)\n",
-    "print(\"Outliers: \", outliers)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "28e0bad7-7db6-498a-bee3-387887d88121",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "49"
+       "array([ 4.85102334,  4.2460076 ,  4.06547636,  5.85691357,  4.7643031 ,\n",
+       "        3.70808994,  5.38083593, -3.21150318,  4.34178282,  5.27943278,\n",
+       "        5.18832276,  3.49523809,  5.18879255,  6.11985401,  6.82788081,\n",
+       "        4.28102737,  5.75549653,  6.42204428,  4.6554984 ,  5.91835923,\n",
+       "        5.51099106,  3.68811904,  6.50303444,  5.9797936 ,  4.66798067,\n",
+       "        5.12729217,  4.58521303,  3.75902407,  4.51499206,  5.37526903,\n",
+       "        5.51825815,  6.75897833,  4.09084031,  6.00309356,  5.3467973 ,\n",
+       "        4.8990804 ,  5.186047  ,  3.79715411, -2.78076139,  5.77517692,\n",
+       "        4.04405104,  4.12500195,  4.74194492,  4.37178552,  5.32829414,\n",
+       "        5.9813509 ,  4.23594793,  5.14458149,  5.7191544 ])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(outliers)"
+    "calculate_sd(data, N = 2, print_stats = True)"
    ]
   },
   {
