--- a/statistical_dq/stat_dq.ipynb
+++ b/statistical_dq/stat_dq.ipynb
@@ -10,6 +10,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "526c6265-1b62-44bb-9944-3bad23683f67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 --version"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "702d4384-bdce-436b-96ea-8802d1fa41c3",
    "metadata": {},
@@ -199,7 +217,11 @@
     }
    ],
    "source": [
-    "calculate_iqr(data, perc_range = [25, 75], print_stats = True)"
+    "calculate_iqr(\n",
+    "    data, \n",
+    "    perc_range = [25, 75], \n",
+    "    print_stats = True\n",
+    ")"
    ]
   },
   {
@@ -299,7 +321,11 @@
     }
    ],
    "source": [
-    "calculate_sd(data, N = 2, print_stats = True)"
+    "calculate_sd(\n",
+    "    data, \n",
+    "    N = 2, \n",
+    "    print_stats = True\n",
+    ")"
    ]
   },
   {
