--- a/ml_dq/ml_dq.ipynb
+++ b/ml_dq/ml_dq.ipynb
@@ -34,11 +34,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0e1e4afa-fcf8-44c4-9b26-3b772e745572",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def generate_dataset(num_features, num_samples, anomaly_percent):\n",
+    "    \"\"\"\n",
+    "    Generates a random dataset with a specified number of features, number of samples, and percentage of anomalies.\n",
+    "\n",
+    "    Parameters:\n",
+    "    num_features (int): Number of features in the dataset.\n",
+    "    num_samples (int): Number of samples in the dataset.\n",
+    "    anomaly_percent (float): Percentage of anomalies in the dataset.\n",
+    "\n",
+    "    Returns:\n",
+    "    X (numpy.ndarray): A 2D numpy array containing the features of the dataset.\n",
+    "    y (numpy.ndarray): A 1D numpy array containing the labels of the dataset.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Generate random data\n",
+    "    X = np.random.rand(num_samples, num_features)\n",
+    "\n",
+    "    # Generate random labels\n",
+    "    num_anomalies = int(num_samples * (anomaly_percent / 100))\n",
+    "    y = np.zeros(num_samples)\n",
+    "    y[:num_anomalies] = 1\n",
+    "    np.random.shuffle(y)\n",
+    "\n",
+    "    return X, y\n"
+   ]
   },
   {
    "cell_type": "code",
