added import reqs

--- a/llm_cb/llm_cb.ipynb
+++ b/llm_cb/llm_cb.ipynb
@@ -19,19 +19,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f82e15a8-b74e-4316-ae74-c251e5a1cb53",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting llama-cpp-python\n",
+      "  Downloading llama_cpp_python-0.1.77.tar.gz (1.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting typing-extensions>=4.5.0\n",
+      "  Downloading typing_extensions-4.7.1-py3-none-any.whl (33 kB)\n",
+      "Collecting diskcache>=5.6.1\n",
+      "  Downloading diskcache-5.6.1-py3-none-any.whl (45 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.6/45.6 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.20.0 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from llama-cpp-python) (1.22.4)\n",
+      "Building wheels for collected packages: llama-cpp-python\n",
+      "  Building wheel for llama-cpp-python (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for llama-cpp-python: filename=llama_cpp_python-0.1.77-cp310-cp310-macosx_13_0_arm64.whl size=236109 sha256=2f72a185a1ed614ad99372cef41f26f7beba406e585634a94a0d95b9a6132772\n",
+      "  Stored in directory: /Users/vatsalpatel/Library/Caches/pip/wheels/aa/ed/39/87f2ad350dbbf13b600ac744899186b8647c5323c62e2bb348\n",
+      "Successfully built llama-cpp-python\n",
+      "Installing collected packages: typing-extensions, diskcache, llama-cpp-python\n",
+      "  Attempting uninstall: typing-extensions\n",
+      "    Found existing installation: typing_extensions 4.4.0\n",
+      "    Uninstalling typing_extensions-4.4.0:\n",
+      "      Successfully uninstalled typing_extensions-4.4.0\n",
+      "Successfully installed diskcache-5.6.1 llama-cpp-python-0.1.77 typing-extensions-4.7.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install llama-cpp-python"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "48dbbe64-4291-43db-afc8-138388970d59",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting langchain\n",
+      "  Downloading langchain-0.0.253-py3-none-any.whl (1.4 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numexpr<3.0.0,>=2.8.4 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from langchain) (2.8.4)\n",
+      "Collecting tenacity<9.0.0,>=8.1.0\n",
+      "  Downloading tenacity-8.2.2-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: numpy<2,>=1 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from langchain) (1.22.4)\n",
+      "Collecting pydantic<2,>=1\n",
+      "  Downloading pydantic-1.10.12-cp310-cp310-macosx_11_0_arm64.whl (2.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m5.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: SQLAlchemy<3,>=1.4 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from langchain) (2.0.8)\n",
+      "Collecting langsmith<0.1.0,>=0.0.11\n",
+      "  Downloading langsmith-0.0.19-py3-none-any.whl (31 kB)\n",
+      "Requirement already satisfied: requests<3,>=2 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from langchain) (2.28.1)\n",
+      "Collecting dataclasses-json<0.6.0,>=0.5.7\n",
+      "  Downloading dataclasses_json-0.5.14-py3-none-any.whl (26 kB)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from langchain) (6.0)\n",
+      "Collecting async-timeout<5.0.0,>=4.0.0\n",
+      "  Downloading async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
+      "Collecting openapi-schema-pydantic<2.0,>=1.2\n",
+      "  Downloading openapi_schema_pydantic-1.2.4-py3-none-any.whl (90 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m90.0/90.0 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting aiohttp<4.0.0,>=3.8.3\n",
+      "  Downloading aiohttp-3.8.5-cp310-cp310-macosx_11_0_arm64.whl (343 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m343.9/343.9 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting frozenlist>=1.1.1\n",
+      "  Downloading frozenlist-1.4.0-cp310-cp310-macosx_11_0_arm64.whl (46 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting multidict<7.0,>=4.5\n",
+      "  Downloading multidict-6.0.4-cp310-cp310-macosx_11_0_arm64.whl (29 kB)\n",
+      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (2.1.1)\n",
+      "Collecting aiosignal>=1.1.2\n",
+      "  Downloading aiosignal-1.3.1-py3-none-any.whl (7.6 kB)\n",
+      "Collecting yarl<2.0,>=1.0\n",
+      "  Downloading yarl-1.9.2-cp310-cp310-macosx_11_0_arm64.whl (62 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.6/62.6 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: attrs>=17.3.0 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (22.1.0)\n",
+      "Collecting typing-inspect<1,>=0.4.0\n",
+      "  Downloading typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
+      "Collecting marshmallow<4.0.0,>=3.18.0\n",
+      "  Downloading marshmallow-3.20.1-py3-none-any.whl (49 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.4/49.4 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: typing-extensions>=4.2.0 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from pydantic<2,>=1->langchain) (4.7.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from requests<3,>=2->langchain) (1.26.12)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from requests<3,>=2->langchain) (2022.6.15)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from requests<3,>=2->langchain) (3.4)\n",
+      "Requirement already satisfied: packaging>=17.0 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from marshmallow<4.0.0,>=3.18.0->dataclasses-json<0.6.0,>=0.5.7->langchain) (21.3)\n",
+      "Collecting mypy-extensions>=0.3.0\n",
+      "  Downloading mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages (from packaging>=17.0->marshmallow<4.0.0,>=3.18.0->dataclasses-json<0.6.0,>=0.5.7->langchain) (3.0.9)\n",
+      "Installing collected packages: tenacity, pydantic, mypy-extensions, multidict, frozenlist, async-timeout, yarl, typing-inspect, openapi-schema-pydantic, marshmallow, langsmith, aiosignal, dataclasses-json, aiohttp, langchain\n",
+      "Successfully installed aiohttp-3.8.5 aiosignal-1.3.1 async-timeout-4.0.2 dataclasses-json-0.5.14 frozenlist-1.4.0 langchain-0.0.253 langsmith-0.0.19 marshmallow-3.20.1 multidict-6.0.4 mypy-extensions-1.0.0 openapi-schema-pydantic-1.2.4 pydantic-1.10.12 tenacity-8.2.2 typing-inspect-0.9.0 yarl-1.9.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install langchain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9466fa87-846b-4589-84aa-1c54b4a72ce7",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain import PromptTemplate, LLMChain\n",
+    "from langchain.llms import LlamaCpp\n",
+    "from langchain.callbacks.manager import CallbackManager\n",
+    "from langchain.callbacks.streaming_stdout import StreamingStdOutCallbackHandler"
+   ]
   },
   {
    "cell_type": "code",
